fix onebox chat links to jump to destination

--- a/get/global.css
+++ b/get/global.css
@@ -31,6 +31,7 @@ a.button { background: rgb(var(--rgb-mid)); border: 1px solid rgba(var(--rgb-dar
 a.button[href]:hover { background: rgb(var(--rgb-light)); }
 a.button:not([href]) { cursor: default; opacity: 0.5; }
 a.button+a.button { margin-left: 1px; }
+a :not([ismap]) { pointer-events: none; }
 
 #keyboard { display: flex; flex-wrap: wrap; justify-content: center; }
 #keyboard>span { flex: 0 0 auto; margin: 0 4px; display: flex; }
